<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="app_likes_input" translatable="false">10999</string>
    <string name="app_likes" translatable="false">"%1$s%2$s"</string>
    <string name="menu_remove" translatable="true">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Enter post text</string>
    <string name="share_post">Share post</string>
    <string name="save" translatable="false">Save</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share" translatable="false">Share</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="chooser_share_post" translatable="false">Share post</string>
    <string name="error_empty_content">Content cannot be empty</string>
    <string name="app_reposts" translatable="false">1200</string>
    <string name="add_post" translatable="false">Add post</string>
    <string name="google_play_unavailable" translatable="false">Google Api Unavailable</string>
    <string name="notification_user_liked" translatable="false">User %1$s liked %2$s\'s post </string>
    <string name="notification_user_new_post" translatable="false">User %1$s create new post</string>
    <string name="channel_remote_name" translatable="false">Server notifications</string>
    <string name="channel_remote_description" translatable="false">Notifications from remote server</string>
    <string name="channel_like_description" translatable="false">Notifications like</string>
    <string name="channel_like_name" translatable="false">Like notifications</string>
    <string name="channel_newPost_name" translatable="false">New post notifications</string>
    <string name="channel_new_post_description" translatable="false">Notifications new post</string>
    <string name="channel_pushToken_name" translatable="false">Push Token</string>
    <string name="channel_push_description" translatable="false">Notifications push</string>
    <string name="app_views" translatable="false">1M</string>
    <string name="post_date" translatable="true">21 May в 18:36</string>
    <string name="nmedia">NMedia!</string>
    <string name="NetologyName_title">Netology is the University of Internet professions of the future.</string>
    <string name="Netology_profile" translatable="false">
Привет, это Нетология.
Мы начинали с курсов об онлайн-маркетинге
Затем выросли в университет интернет-профессий: учили дизайнеров, аналитиков, программистов, менеджеров, маркетологов… Но обучать новым профессиям — это не предел. Мы продолжаем расти
Сегодня мы даём знания не только начинающим, но и тем, кто давно в профессии. Специалисты изучают новые инструменты, топ-менеджеры — получают степень MBA, руководители бизнеса — обучают своих сотрудников и обучаются сами
Нетология помогает расти на всех этапах карьеры — получать знания на старте и открывать новые высоты.
</string>
    <string name="chooser_video_player">Choose video player</string>


</resources>