<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@id/barrier_upper"
        app:layout_constraintBottom_toTopOf="@id/barrier_upper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/avatar_netology"

        />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/NetologyName_title"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintEnd_toStartOf="@+id/threeDotButton"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toTopOf="@+id/avatar"
        tools:ignore="UnknownId" />


    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:gravity="left|center"
        android:text="@string/Netology_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/barrier_upper" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_upper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="published, author,threeDotButton" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar, author,threeDotButton,content" />


    <ImageView

        android:id="@+id/viewsButton"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        app:iconTint="@color/Grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_down"
        app:srcCompat="@drawable/ic_baseline_visibility_24" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/threeDotButton"
        style="@style/MyStyleMaterialButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="4dp"
        android:background="@color/Grey"
        app:icon="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@+id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/author"
        app:layout_constraintVertical_bias="0.4"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.button.MaterialButton

        android:id="@id/likesButton"
        style="@style/MyStyleMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:checkable="true"
        android:text="@string/app_likes_input"
        app:icon="@drawable/ic_liked_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrier_down" />


    <com.google.android.material.button.MaterialButton

        android:id="@+id/repostsButton"
        style="@style/MyStyleMaterialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_reposts"
        app:icon="@drawable/ic_baseline_share_24"
        app:layout_constraintBottom_toBottomOf="@+id/likesButton"
        app:layout_constraintStart_toEndOf="@+id/likesButton"
        app:layout_constraintTop_toBottomOf="@+id/barrier_down"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/viewsNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:text="@string/app_views"
        app:layout_constraintBottom_toBottomOf="@+id/viewsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toEndOf="@+id/viewsButton"
        app:layout_constraintTop_toTopOf="@+id/viewsButton"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:id="@+id/published"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post_date"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toStartOf="@+id/author"
        app:layout_constraintTop_toBottomOf="@+id/author" />
</androidx.constraintlayout.widget.ConstraintLayout>